--- a/blog1_en.html
+++ b/blog1_en.html
@@ -5,6 +5,7 @@
 <head>
   <link rel="stylesheet" href="style_en.css">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" charset="UTF-8">
+  <title>Pertevniyal Mathematics Club</title>
 
       <script>
                 function openSidebar() {
