--- a/blog4_en.html
+++ b/blog4_en.html
@@ -5,6 +5,7 @@
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" charset="UTF-8">
     <link rel="stylesheet" href="style_en.css">
+  <title>Pertevniyal Mathematics Club</title>
 
     <script>
                 function openSidebar() {
