--- a/hakkımızda.html
+++ b/hakkımızda.html
@@ -5,6 +5,7 @@
 <head>
     <link rel="stylesheet" href="style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" charset="UTF-8">
+    <title>Pertevniyal Matematik Kulübü</title>
 
     <script>
                 function openSidebar() {
