--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" charset="UTF-8">
     <link rel="stylesheet" href="style.css">
+  <title>Pertevniyal Matematik Kulübü</title>
 
         <script>
   function buyut(img) {
