--- a/index_en.html
+++ b/index_en.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" charset="UTF-8">
     <link rel="stylesheet" href="style_en.css">
   <title>Pertevniyal Mathematics Club</title>
+  <link rel="icon" href="görseller/favicon-32x32.png" type="image/png">
 
         <script>
   function buyut(img) {
@@ -69,7 +70,7 @@
   margin-left: 20px;
 ">
 </div>
-  <a href="index.html">Turkish</a>
+  <a href="index.html">Türkçe</a>
   <a href="index_en.html">English</a>
 </div>
 
@@ -295,29 +296,40 @@ Check Out Other Questions
 
   <div style="display: flex; gap: 20px; align-items: center; justify-content: space-between; flex-wrap: wrap;">
     <div style="flex: 1; text-align: center;">
-      <img src="postlar/postlar ingilizce/EN16.png" alt="Left Image" onclick="buyut(this)" style="max-width: 100%; max-height: 300px; border-radius: 8px; cursor: pointer;">
+      <img src="postlar/postlar ingilizce/20.png" alt="Left Image" onclick="buyut(this)" style="max-width: 100%; max-height: 300px; border-radius: 8px; cursor: pointer;">
     </div>
 
     <div style="flex: 2; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; font-size: 16px; line-height: 1.6;">
-      <p>
-        📘 <strong>Divisibility Rules for 19 and 37</strong><br><br>
-        "Little tricks for big numbers!"<br>
-        Divisibility rules for larger primes like 19 and 37 might sound mysterious, but behind them lies the power of modular arithmetic!
-        The weights assigned to each digit follow special repeating patterns specific to these numbers.<br><br>
+<h4>💡 What is Fermat’s Little Theorem?</h4>
+<p>
+  For a prime number <strong>p</strong> and a natural number <strong>a</strong> that is coprime to <strong>p</strong>:<br>
+  👉 <code>a<sup>p</sup> ≡ a (mod p)</code>
+</p>
 
-        🔍 <strong>How were these rules discovered?</strong><br>
-        They come from calculating powers of 10 modulo 19 and modulo 37.
-        This way, each digit gains a “weight” based on how it behaves within that modular system.<br><br>
+<p>
+  This theorem is a powerful tool in <strong>modular arithmetic</strong>. It deals with the remainders of numbers when divided by primes.
+</p>
 
-        📜 <strong>Why are they important?</strong><br>
-        In the past, dividing large numbers mentally was tough.
-        Mathematicians developed these rules to quickly test divisibility without heavy calculations.
-        Today, they remain crucial tools for understanding mathematical thinking and algorithms.
-      </p>
+<p>
+  📜 Fermat developed this theorem in the 1600s, and it was used for many years in <strong>primality testing</strong> and fields like <strong>cryptography</strong>.  
+  It is especially one of the foundations of the <strong>RSA algorithm</strong>!
+</p>
+
+<h4>🔍 What is Mathematical Induction?</h4>
+<p>
+  Induction is a method of proof where a statement is first shown to be true for a starting value, and then shown to hold for the next value assuming it's true for the current one—thereby proving it for all natural numbers.
+</p>
+
+<p>
+  It works like a "domino effect" in mathematics:<br>
+  🎯 If the first domino falls, and<br>
+  🎯 Each domino knocks over the next,<br>
+  ➡️ Then all dominos will fall!
+</p>
     </div>
 
     <div style="flex: 1; text-align: center;">
-      <img src="postlar/postlar ingilizce/EN17.png" alt="Right Image" onclick="buyut(this)" style="max-width: 100%; max-height: 300px; border-radius: 8px; cursor: pointer;">
+      <img src="postlar/postlar ingilizce/21.png" alt="Right Image" onclick="buyut(this)" style="max-width: 100%; max-height: 300px; border-radius: 8px; cursor: pointer;">
     </div>
   </div>
 
