--- a/ispatlar_en.html
+++ b/ispatlar_en.html
@@ -4,6 +4,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" charset="UTF-8">
     <link rel="stylesheet" href="style_en.css">
     <title>Pertevniyal Mathematics Club</title>
+    <link rel="icon" href="görseller/favicon-32x32.png" type="image/png">
 
     <script>
   function buyut(img) {
@@ -62,7 +63,7 @@
   margin-left: 20px;
 ">
 </div>
-  <a href="index.html">Turkish</a>
+  <a href="index.html">Türkçe</a>
   <a href="index_en.html">English</a>
 </div>
 
@@ -367,6 +368,58 @@
 
     <div class="ispatla-gorsel">
       <img src="postlar/postlar ingilizce/EN17.png" alt="Right Image" onclick="buyut(this)">
+    </div>
+  </div>
+</div>
+
+
+
+
+
+
+
+<div class="ispatla-kapsayici">
+  <h2 class="ispatla-baslik">Fermat Teoremi</h2>
+
+  <div class="ispatla-kutu">
+    <div class="ispatla-gorsel">
+      <img src="postlar/postlar ingilizce/21.png" alt="Sol Görsel" onclick="buyut(this)">
+    </div>
+
+<div class="ispatla-metin" style="max-width: 800px; margin: 0 auto; padding: 24px; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; font-size: 17px; line-height: 1.5; color: #333; text-align: left;">
+
+
+<h4>💡 What is Fermat’s Little Theorem?</h4>
+<p>
+  For a prime number <strong>p</strong> and a natural number <strong>a</strong> that is coprime to <strong>p</strong>:<br>
+  👉 <code>a<sup>p</sup> ≡ a (mod p)</code>
+</p>
+
+<p>
+  This theorem is a powerful tool in <strong>modular arithmetic</strong>. It deals with the remainders of numbers when divided by primes.
+</p>
+
+<p>
+  📜 Fermat developed this theorem in the 1600s, and it was used for many years in <strong>primality testing</strong> and fields like <strong>cryptography</strong>.  
+  It is especially one of the foundations of the <strong>RSA algorithm</strong>!
+</p>
+
+<h4>🔍 What is Mathematical Induction?</h4>
+<p>
+  Induction is a method of proof where a statement is first shown to be true for a starting value, and then shown to hold for the next value assuming it's true for the current one—thereby proving it for all natural numbers.
+</p>
+
+<p>
+  It works like a "domino effect" in mathematics:<br>
+  🎯 If the first domino falls, and<br>
+  🎯 Each domino knocks over the next,<br>
+  ➡️ Then all dominos will fall!
+</p>
+
+</div>
+
+    <div class="ispatla-gorsel">
+      <img src="postlar/postlar ingilizce/21.png" alt="Sağ Görsel" onclick="buyut(this)">
     </div>
   </div>
 </div>
