--- a/çözenler.html
+++ b/çözenler.html
@@ -4,6 +4,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" charset="UTF-8">
     <link rel="stylesheet" href="style.css">
     <title>Pertevniyal Matematik Kulübü</title>
+    <link rel="icon" href="görseller/favicon-32x32.png" type="image/png">
 
     <script>
           function openSidebar() {
@@ -64,7 +65,7 @@
 ">
 </div>
   <a href="index.html">Türkçe</a>
-  <a href="index_en.html">ingilizce</a>
+  <a href="index_en.html">English</a>
 </div>
 
 
@@ -113,23 +114,6 @@
     <img src="görseller/yakında.png" alt="Çözüm Görseli" onclick="buyut(this)" />
   </div>
 </div>
-
-
-
-
-<div class="solution-box">
-  <!-- Sol: Soru Görseli -->
-  <div class="question-side">
-    <span class="question-number">3</span>
-    <img src="görseller/eular_soru.png" alt="Soru Görseli" />
-  </div>
-
-  <!-- Sağ: Çözüm Görseli (Büyütülebilir) -->
-  <div class="answer-side">
-    <img src="görseller/yakında.png" alt="Çözüm Görseli" onclick="buyut(this)" />
-  </div>
-</div>
-
 
 
 <!-- Modal Kutusu -->
