--- a/çözenler_en.html
+++ b/çözenler_en.html
@@ -4,6 +4,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" charset="UTF-8">
     <link rel="stylesheet" href="style_en.css">
     <title>Pertevniyal Mathematics Club</title>
+    <link rel="icon" href="görseller/favicon-32x32.png" type="image/png">
 
     <script>
           function openSidebar() {
@@ -63,7 +64,7 @@
   margin-left: 20px;
 ">
 </div>
-  <a href="index.html">Turkish</a>
+  <a href="index.html">Türkçe</a>
   <a href="index_en.html">English</a>
 </div>
 
@@ -105,24 +106,6 @@
   <div class="question-side">
     <span class="question-number">1</span>
     <img src="görseller/stewart_en.png" alt="Soru Görseli" />
-  </div>
-
-  <!-- Sağ: Çözüm Görseli (Büyütülebilir) -->
-  <div class="answer-side">
-    <img src="görseller/COMİNG.png" alt="Çözüm Görseli" onclick="buyut(this)" />
-  </div>
-</div>
-
-
-
-
-
-
-<div class="solution-box">
-  <!-- Sol: Soru Görseli -->
-  <div class="question-side">
-    <span class="question-number">1</span>
-    <img src="görseller/eular-question-en.png" alt="Soru Görseli" />
   </div>
 
   <!-- Sağ: Çözüm Görseli (Büyütülebilir) -->
