--- a/blog3.html
+++ b/blog3.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" charset="UTF-8">
     <link rel="stylesheet" href="style.css">
   <title>Pertevniyal Matematik Kulübü</title>
+  <link rel="icon" href="görseller/favicon-32x32.png" type="image/png">
 
         <script>
                 function openSidebar() {
@@ -55,7 +56,7 @@
 ">
 </div>
   <a href="index.html">Türkçe</a>
-  <a href="index_en.html">ingilizce</a>
+  <a href="index_en.html">English</a>
 </div>
 
 
