--- a/blog3_en.html
+++ b/blog3_en.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" charset="UTF-8">
     <link rel="stylesheet" href="style_en.css">
   <title>Pertevniyal Mathematics Club</title>
+  <link rel="icon" href="görseller/favicon-32x32.png" type="image/png">
 
         <script>
                 function openSidebar() {
@@ -54,7 +55,7 @@
   margin-left: 20px;
 ">
 </div>
-  <a href="index.html">Turkish</a>
+  <a href="index.html">Türkçe</a>
   <a href="index_en.html">English</a>
 </div>
 
