--- a/geçmiş sorular.html
+++ b/geçmiş sorular.html
@@ -4,6 +4,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" charset="UTF-8">
     <link rel="stylesheet" href="style.css">
     <title>Pertevniyal Matematik Kulübü</title>
+    <link rel="icon" href="görseller/favicon-32x32.png" type="image/png">
 
     <script>
                 function openSidebar() {
@@ -53,7 +54,7 @@
 ">
 </div>
   <a href="index.html">Türkçe</a>
-  <a href="index_en.html">ingilizce</a>
+  <a href="index_en.html">English</a>
 </div>
   
 <div style="display: flex; justify-content: center; margin-top: 30px;">
@@ -86,13 +87,6 @@
   <div class="soru-gorsel_geçmiş">
     <span class="soru-numara_geçmiş">2</span>
     <img src="görseller/stewart_soru.png" alt="Soru Görseli">
-  </div>
-</div>
-
-<div class="soru-gorsel-wrapper_geçmiş">
-  <div class="soru-gorsel_geçmiş">
-    <span class="soru-numara_geçmiş">3</span>
-    <img src="görseller/eular_soru.png" alt="Soru Görseli">
   </div>
 </div>
 
