--- a/geçmiş sorular_en.html
+++ b/geçmiş sorular_en.html
@@ -4,6 +4,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" charset="UTF-8">
     <link rel="stylesheet" href="style_en.css">
     <title>Pertevniyal Mathematics Club</title>
+    <link rel="icon" href="görseller/favicon-32x32.png" type="image/png">
 
     <script>
                 function openSidebar() {
@@ -52,7 +53,7 @@
   margin-left: 20px;
 ">
 </div>
-  <a href="index.html">Turkish</a>
+  <a href="index.html">Türkçe</a>
   <a href="index_en.html">English</a>
 </div>
   
@@ -89,12 +90,6 @@
   </div>
 </div>
 
-<div class="soru-gorsel-wrapper_geçmiş">
-  <div class="soru-gorsel_geçmiş">
-    <span class="soru-numara_geçmiş">3</span>
-    <img src="görseller/eular-question-en.png" alt="Soru Görseli">
-  </div>
-</div>
 
 
 
