--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" charset="UTF-8">
     <link rel="stylesheet" href="style.css">
   <title>Pertevniyal Matematik Kulübü</title>
+  <link rel="icon" href="görseller/favicon-32x32.png" type="image/png">
 
         <script>
   function buyut(img) {
@@ -68,7 +69,7 @@
 ">
 </div>
   <a href="index.html">Türkçe</a>
-  <a href="index_en.html">ingilizce</a>
+  <a href="index_en.html">English</a>
 </div>
 
 
@@ -299,25 +300,43 @@ font-size: 14px;
 
   <div style="display: flex; gap: 20px; align-items: center; justify-content: space-between; flex-wrap: wrap;">
     <div style="flex: 1; text-align: center;">
-      <img src="postlar/bölünebilme (1)/16.png" alt="Sol Görsel" onclick="buyut(this)" style="max-width: 100%; max-height: 300px; border-radius: 8px; cursor: pointer;">
+      <img src="postlar/fermat/22.png" alt="Sol Görsel" onclick="buyut(this)" style="max-width: 100%; max-height: 300px; border-radius: 8px; cursor: pointer;">
     </div>
 
     <div style="flex: 2; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; font-size: 16px; line-height: 1.6;">
-      <p>
-        📘 <strong>Bölünebilme kuralları-2: 19 ve 37 ile Bölünebilme Kuralları</strong><br><br>
-        “Büyük sayılar için küçük tüyolar!”<br>
-        19 ve 37 gibi büyük asal sayılar için bölünebilme kuralları kulağa gizemli gelse de, arkasında yine modüler aritmetik var! Basamakların ağırlıkları, bu sayılara göre özel bir örüntü izler.<br><br>
+<h3>📐 Fermat’nın Küçük Teoremi ve Tümevarım ile İspatı</h3>
 
-        🔍 <strong>Peki bu kurallar nasıl bulundu?</strong><br>
-        Bu kurallar, 10’un mod 19 ve mod 37’deki kuvvetleri hesaplanarak oluşturulur. Bu şekilde her basamak, sayının o mod içindeki davranışına göre bir “ağırlık” kazanır.<br><br>
+<h4>💡 Fermat’nın Küçük Teoremi Nedir?</h4>
+<p>
+  Bir asal sayı <strong>p</strong> ve <strong>p</strong> ile aralarında asal olan bir doğal sayı <strong>a</strong> için:<br>
+  👉 <code>a<sup>p</sup> ≡ a (mod p)</code>
+</p>
 
-        📜 <strong>Neden Önemli?</strong><br>
-        Eskiden büyük sayıları zihinden bölmek zordu. Matematikçiler bu kurallarla bölünebilirliği hızlıca test etmeyi başardılar. Bugün hâlâ matematiksel düşünceyi ve algoritmaları anlamada çok önemli araçlardır.
-      </p>
+<p>
+  Bu teorem, <strong>modüler aritmetikte</strong> oldukça güçlü bir araçtır. Sayıların asal sayılara göre kalanıyla ilgilenir.
+</p>
+
+<p>
+  📜 Fermat bu teoremi 1600'lü yıllarda geliştirmiştir ve uzun yıllar <strong>asal sayıların test edilmesinde</strong>, <strong>kriptografi</strong> gibi alanlarda kullanılmıştır.
+  Özellikle <strong>RSA algoritmasının</strong> temellerinden biridir!
+</p>
+
+<h4>🔍 Tümevarım Nedir?</h4>
+<p>
+  Tümevarım, bir önerme önce bir başlangıç değeri için doğru kabul edilip, sonra ardışık bir adımın da doğru olduğu ispatlanarak
+  tüm doğal sayılar için geçerli hale getirilmesidir.
+</p>
+
+<p>
+  Matematikte bir "domino etkisi" gibidir:<br>
+  🎯 Başlangıç taşı düşerse ve<br>
+  🎯 Her taş bir sonrakini devirebiliyorsa,<br>
+  ➡️ Tüm taşlar devrilir!
+</p>
     </div>
 
     <div style="flex: 1; text-align: center;">
-      <img src="postlar/bölünebilme (1)/17.png" alt="Sağ Görsel" onclick="buyut(this)" style="max-width: 100%; max-height: 300px; border-radius: 8px; cursor: pointer;">
+      <img src="postlar/fermat/23.png" alt="Sağ Görsel" onclick="buyut(this)" style="max-width: 100%; max-height: 300px; border-radius: 8px; cursor: pointer;">
     </div>
   </div>
 
