--- a/ispatlar.html
+++ b/ispatlar.html
@@ -4,6 +4,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" charset="UTF-8">
     <link rel="stylesheet" href="style.css">
     <title>Pertevniyal Matematik Kulübü</title>
+    <link rel="icon" href="görseller/favicon-32x32.png" type="image/png">
 
     <script>
   function buyut(img) {
@@ -63,7 +64,7 @@
 ">
 </div>
   <a href="index.html">Türkçe</a>
-  <a href="index_en.html">ingilizce</a>
+  <a href="index_en.html">English</a>
 </div>
 
 <div style="display: flex; justify-content: center; margin-top: 30px;">
@@ -368,6 +369,58 @@
 
     <div class="ispatla-gorsel">
       <img src="postlar/bölünebilme (1)/17.png" alt="Sağ Görsel" onclick="buyut(this)">
+    </div>
+  </div>
+</div>
+
+
+
+
+
+<div class="ispatla-kapsayici">
+  <h2 class="ispatla-baslik">Fermat Teoremi</h2>
+
+  <div class="ispatla-kutu">
+    <div class="ispatla-gorsel">
+      <img src="postlar/fermat/22.png" alt="Sol Görsel" onclick="buyut(this)">
+    </div>
+
+<div class="ispatla-metin" style="max-width: 800px; margin: 0 auto; padding: 24px; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; font-size: 17px; line-height: 1.5; color: #333; text-align: left;">
+
+<h3>📐 Fermat’nın Küçük Teoremi ve Tümevarım ile İspatı</h3>
+
+<h4>💡 Fermat’nın Küçük Teoremi Nedir?</h4>
+<p>
+  Bir asal sayı <strong>p</strong> ve <strong>p</strong> ile aralarında asal olan bir doğal sayı <strong>a</strong> için:<br>
+  👉 <code>a<sup>p</sup> ≡ a (mod p)</code>
+</p>
+
+<p>
+  Bu teorem, <strong>modüler aritmetikte</strong> oldukça güçlü bir araçtır. Sayıların asal sayılara göre kalanıyla ilgilenir.
+</p>
+
+<p>
+  📜 Fermat bu teoremi 1600'lü yıllarda geliştirmiştir ve uzun yıllar <strong>asal sayıların test edilmesinde</strong>, <strong>kriptografi</strong> gibi alanlarda kullanılmıştır.
+  Özellikle <strong>RSA algoritmasının</strong> temellerinden biridir!
+</p>
+
+<h4>🔍 Tümevarım Nedir?</h4>
+<p>
+  Tümevarım, bir önerme önce bir başlangıç değeri için doğru kabul edilip, sonra ardışık bir adımın da doğru olduğu ispatlanarak
+  tüm doğal sayılar için geçerli hale getirilmesidir.
+</p>
+
+<p>
+  Matematikte bir "domino etkisi" gibidir:<br>
+  🎯 Başlangıç taşı düşerse ve<br>
+  🎯 Her taş bir sonrakini devirebiliyorsa,<br>
+  ➡️ Tüm taşlar devrilir!
+</p>
+
+</div>
+
+    <div class="ispatla-gorsel">
+      <img src="postlar/fermat/23.png" alt="Sağ Görsel" onclick="buyut(this)">
     </div>
   </div>
 </div>
