--- a/sorular_en.html
+++ b/sorular_en.html
@@ -4,6 +4,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" charset="UTF-8">
     <link rel="stylesheet" href="style_en.css">
     <title>Pertevniyal Mathematics Club</title>
+    <link rel="icon" href="görseller/favicon-32x32.png" type="image/png">
 
     <script>
           function openSidebar() {
@@ -52,7 +53,7 @@
   margin-left: 20px;
 ">
 </div>
-  <a href="">Turkish</a>
+  <a href="">Türkçe</a>
   <a href="index_en.html">English</a>
 </div>
 
@@ -108,14 +109,6 @@ On this page, we aim to publish 3 or 4 solved or unsolved problems every week,
     <img src="görseller/stewart_en.png" alt="Soru Görseli">
   </div>
 </div>
-
-<div class="soru-gorsel-wrapper">
-  <div class="soru-gorsel">
-    <span class="soru-numara">3</span>
-    <img src="görseller/eular-question-en.png" alt="Soru Görseli">
-  </div>
-</div>
-
 
 
 <div class="alt-buton-kapsayici">
