--- a/index.html
+++ b/index.html
@@ -300,43 +300,38 @@ font-size: 14px;
 
   <div style="display: flex; gap: 20px; align-items: center; justify-content: space-between; flex-wrap: wrap;">
     <div style="flex: 1; text-align: center;">
-      <img src="postlar/fermat/22.png" alt="Sol Görsel" onclick="buyut(this)" style="max-width: 100%; max-height: 300px; border-radius: 8px; cursor: pointer;">
+      <img src="postlar/trigo seva/25.png" alt="Sol Görsel" onclick="buyut(this)" style="max-width: 100%; max-height: 300px; border-radius: 8px; cursor: pointer;">
     </div>
 
     <div style="flex: 2; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; font-size: 16px; line-height: 1.6;">
-<h3>📐 Fermat’nın Küçük Teoremi ve Tümevarım ile İspatı</h3>
+<h3>📐 Trigonometrik Seva Teoremi: Geometriyle Trigonometrinin Güç Birliği!</h3>
 
-<h4>💡 Fermat’nın Küçük Teoremi Nedir?</h4>
 <p>
-  Bir asal sayı <strong>p</strong> ve <strong>p</strong> ile aralarında asal olan bir doğal sayı <strong>a</strong> için:<br>
-  👉 <code>a<sup>p</sup> ≡ a (mod p)</code>
+  Bir üçgende, içinden geçen üç doğru bir noktada kesişiyorsa; bu yalnızca estetik bir rastlantı değil, derin bir matematiksel düzenin işaretidir.
 </p>
 
 <p>
-  Bu teorem, <strong>modüler aritmetikte</strong> oldukça güçlü bir araçtır. Sayıların asal sayılara göre kalanıyla ilgilenir.
+  🔍 Bu düzeni açıklamak için Seva Teoremi tarihte ilk kez 17. yüzyılda İtalyan matematikçi Vincento Seva tarafından ortaya atıldı.<br>
+  Ancak üçgende kenar oranları yerine açıların sinüsleri ile kurulan ilişkiyi gösteren <strong>Trigonometrik Seva Teoremi</strong>, daha sonra geliştirildi.
 </p>
 
-<p>
-  📜 Fermat bu teoremi 1600'lü yıllarda geliştirmiştir ve uzun yıllar <strong>asal sayıların test edilmesinde</strong>, <strong>kriptografi</strong> gibi alanlarda kullanılmıştır.
-  Özellikle <strong>RSA algoritmasının</strong> temellerinden biridir!
-</p>
+<h4>📚 Peki nerelerde karşımıza çıkar?</h4>
+<ul>
+  <li>Üçgenlerde iç teğet çemberin merkezi (incenter)</li>
+  <li>Ağırlık merkezi (centroid), kenarortaylar</li>
+  <li>Cevian (bir köşeden karşı kenara inen doğru parçaları) analizlerinde</li>
+  <li>Üçgen çözümlerinde ve olimpiyat sorularında</li>
+</ul>
 
-<h4>🔍 Tümevarım Nedir?</h4>
+<h4>🧠 Trigonometrik Seva'nın Derinliği</h4>
 <p>
-  Tümevarım, bir önerme önce bir başlangıç değeri için doğru kabul edilip, sonra ardışık bir adımın da doğru olduğu ispatlanarak
-  tüm doğal sayılar için geçerli hale getirilmesidir.
-</p>
-
-<p>
-  Matematikte bir "domino etkisi" gibidir:<br>
-  🎯 Başlangıç taşı düşerse ve<br>
-  🎯 Her taş bir sonrakini devirebiliyorsa,<br>
-  ➡️ Tüm taşlar devrilir!
+  Bir köşeden diğerine uzanan doğruların altında bu kadar derin bir ilişki olduğunu biliyor muydunuz?<br>
+  Artık biliyorsunuz! <strong>Trigonometri, geometriye nefes aldırır. 😌</strong>
 </p>
     </div>
 
     <div style="flex: 1; text-align: center;">
-      <img src="postlar/fermat/23.png" alt="Sağ Görsel" onclick="buyut(this)" style="max-width: 100%; max-height: 300px; border-radius: 8px; cursor: pointer;">
+      <img src="postlar/trigo seva/24.png" alt="Sağ Görsel" onclick="buyut(this)" style="max-width: 100%; max-height: 300px; border-radius: 8px; cursor: pointer;">
     </div>
   </div>
 
