--- a/index_en.html
+++ b/index_en.html
@@ -296,40 +296,38 @@ Check Out Other Questions
 
   <div style="display: flex; gap: 20px; align-items: center; justify-content: space-between; flex-wrap: wrap;">
     <div style="flex: 1; text-align: center;">
-      <img src="postlar/postlar ingilizce/20.png" alt="Left Image" onclick="buyut(this)" style="max-width: 100%; max-height: 300px; border-radius: 8px; cursor: pointer;">
+      <img src="postlar/postlar ingilizce/22.png" alt="Left Image" onclick="buyut(this)" style="max-width: 100%; max-height: 300px; border-radius: 8px; cursor: pointer;">
     </div>
 
     <div style="flex: 2; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; font-size: 16px; line-height: 1.6;">
-<h4>💡 What is Fermat’s Little Theorem?</h4>
+<h3>📐 Trigonometric Ceva Theorem: The Powerful Union of Geometry and Trigonometry!</h3>
+
 <p>
-  For a prime number <strong>p</strong> and a natural number <strong>a</strong> that is coprime to <strong>p</strong>:<br>
-  👉 <code>a<sup>p</sup> ≡ a (mod p)</code>
+  In a triangle, if three lines intersect at a single point, it’s not just an aesthetic coincidence — it’s a sign of a deep mathematical order.
 </p>
 
 <p>
-  This theorem is a powerful tool in <strong>modular arithmetic</strong>. It deals with the remainders of numbers when divided by primes.
+  🔍 To explain this order, the original Ceva’s Theorem was proposed in the 17th century by the Italian mathematician Vincento Ceva.<br>
+  Later, a version involving the <strong>sines of angles</strong> instead of side ratios was developed, known as the <strong>Trigonometric Ceva’s Theorem</strong>.
 </p>
 
-<p>
-  📜 Fermat developed this theorem in the 1600s, and it was used for many years in <strong>primality testing</strong> and fields like <strong>cryptography</strong>.  
-  It is especially one of the foundations of the <strong>RSA algorithm</strong>!
-</p>
+<h4>📚 Where does it show up?</h4>
+<ul>
+  <li>The incenter of a triangle (center of the incircle)</li>
+  <li>The centroid and medians</li>
+  <li>Analyses involving cevians (line segments from a vertex to the opposite side)</li>
+  <li>Triangle solving problems and math olympiad questions</li>
+</ul>
 
-<h4>🔍 What is Mathematical Induction?</h4>
+<h4>🧠 The Depth of Trigonometric Ceva</h4>
 <p>
-  Induction is a method of proof where a statement is first shown to be true for a starting value, and then shown to hold for the next value assuming it's true for the current one—thereby proving it for all natural numbers.
-</p>
-
-<p>
-  It works like a "domino effect" in mathematics:<br>
-  🎯 If the first domino falls, and<br>
-  🎯 Each domino knocks over the next,<br>
-  ➡️ Then all dominos will fall!
+  Did you know there’s such a profound relationship behind lines connecting the corners of a triangle?<br>
+  Now you do! <strong>Trigonometry gives geometry a breath of fresh air. 😌</strong>
 </p>
     </div>
 
     <div style="flex: 1; text-align: center;">
-      <img src="postlar/postlar ingilizce/21.png" alt="Right Image" onclick="buyut(this)" style="max-width: 100%; max-height: 300px; border-radius: 8px; cursor: pointer;">
+      <img src="postlar/postlar ingilizce/23.png" alt="Right Image" onclick="buyut(this)" style="max-width: 100%; max-height: 300px; border-radius: 8px; cursor: pointer;">
     </div>
   </div>
 
