--- a/ispatlar.html
+++ b/ispatlar.html
@@ -427,6 +427,53 @@
 
 
 
+
+<div class="ispatla-kapsayici">
+  <h2 class="ispatla-baslik">Trigonometrik Seva Teoremi</h2>
+
+  <div class="ispatla-kutu">
+    <div class="ispatla-gorsel">
+      <img src="postlar/trigo seva/25.png" alt="Sol Görsel" onclick="buyut(this)">
+    </div>
+
+<div class="ispatla-metin" style="max-width: 800px; margin: 0 auto; padding: 24px; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; font-size: 17px; line-height: 1.5; color: #333; text-align: left;">
+
+<h3>📐 Trigonometrik Seva Teoremi: Geometriyle Trigonometrinin Güç Birliği!</h3>
+
+<p>
+  Bir üçgende, içinden geçen üç doğru bir noktada kesişiyorsa; bu yalnızca estetik bir rastlantı değil, derin bir matematiksel düzenin işaretidir.
+</p>
+
+<p>
+  🔍 Bu düzeni açıklamak için Seva Teoremi tarihte ilk kez 17. yüzyılda İtalyan matematikçi Vincento Seva tarafından ortaya atıldı.<br>
+  Ancak üçgende kenar oranları yerine açıların sinüsleri ile kurulan ilişkiyi gösteren <strong>Trigonometrik Seva Teoremi</strong>, daha sonra geliştirildi.
+</p>
+
+<h4>📚 Peki nerelerde karşımıza çıkar?</h4>
+<ul>
+  <li>Üçgenlerde iç teğet çemberin merkezi (incenter)</li>
+  <li>Ağırlık merkezi (centroid), kenarortaylar</li>
+  <li>Cevian (bir köşeden karşı kenara inen doğru parçaları) analizlerinde</li>
+  <li>Üçgen çözümlerinde ve olimpiyat sorularında</li>
+</ul>
+
+<h4>🧠 Trigonometrik Seva'nın Derinliği</h4>
+<p>
+  Bir köşeden diğerine uzanan doğruların altında bu kadar derin bir ilişki olduğunu biliyor muydunuz?<br>
+  Artık biliyorsunuz! <strong>Trigonometri, geometriye nefes aldırır. 😌</strong>
+</p>
+
+</div>
+
+    <div class="ispatla-gorsel">
+      <img src="postlar/trigo seva/25.png" alt="Sağ Görsel" onclick="buyut(this)">
+    </div>
+  </div>
+</div>
+
+
+
+
 <div id="modal" class="modal" onclick="kapat()">
   <span class="modal-kapat">&times;</span>
   <img class="modal-icerik" id="modal-img">
