--- a/ispatlar_en.html
+++ b/ispatlar_en.html
@@ -432,6 +432,51 @@
 </div>
 
 
+<div class="ispatla-kapsayici">
+  <h2 class="ispatla-baslik">
+Trigonometric Ceva Theorem</h2>
+
+  <div class="ispatla-kutu">
+    <div class="ispatla-gorsel">
+      <img src="postlar/postlar ingilizce/23.png" alt="Sol Görsel" onclick="buyut(this)">
+    </div>
+
+<div class="ispatla-metin" style="max-width: 800px; margin: 0 auto; padding: 24px; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; font-size: 17px; line-height: 1.5; color: #333; text-align: left;">
+
+<h3>📐 Trigonometric Ceva Theorem: The Powerful Union of Geometry and Trigonometry!</h3>
+
+<p>
+  In a triangle, if three lines intersect at a single point, it’s not just an aesthetic coincidence — it’s a sign of a deep mathematical order.
+</p>
+
+<p>
+  🔍 To explain this order, the original Ceva’s Theorem was proposed in the 17th century by the Italian mathematician Vincento Ceva.<br>
+  Later, a version involving the <strong>sines of angles</strong> instead of side ratios was developed, known as the <strong>Trigonometric Ceva’s Theorem</strong>.
+</p>
+
+<h4>📚 Where does it show up?</h4>
+<ul>
+  <li>The incenter of a triangle (center of the incircle)</li>
+  <li>The centroid and medians</li>
+  <li>Analyses involving cevians (line segments from a vertex to the opposite side)</li>
+  <li>Triangle solving problems and math olympiad questions</li>
+</ul>
+
+<h4>🧠 The Depth of Trigonometric Ceva</h4>
+<p>
+  Did you know there’s such a profound relationship behind lines connecting the corners of a triangle?<br>
+  Now you do! <strong>Trigonometry gives geometry a breath of fresh air. 😌</strong>
+</p>
+
+</div>
+
+    <div class="ispatla-gorsel">
+      <img src="postlar/postlar ingilizce/22.png" alt="Sağ Görsel" onclick="buyut(this)">
+    </div>
+  </div>
+</div>
+
+
 
 <!--ispatlar-->
 
