--- a/blog.html
+++ b/blog.html
@@ -87,37 +87,16 @@
 <a href="blog2.html" class="blog-link">
   <div class="blog-karti">
     <div class="blog-gorsel">
-      <img src="matematikçiler/arşimet1.png" alt="Blog görseli">
+      <img src="matematikçiler/Leonardo Pisano Bigollo 1.png " alt="Blog görseli">
     </div>
     <div class="blog-baslik">
-      <h2>Geçmişin İzinden Günümüze...</h2>
+      <h2>Matematik ve Doğa</h2>
     </div>
   </div>
 </a>
 
 
-<a href="blog3.html" class="blog-link">
-  <div class="blog-karti">
-    <div class="blog-gorsel">
-      <img src="matematikçiler/Carl Friedrich Gauss1.png" alt="Blog görseli">
-    </div>
-    <div class="blog-baslik">
-      <h2>Matematik küçük yaştamı öğrenilmeli?</h2>
-    </div>
-  </div>
-</a>
 
-
-<a href="blog4.html" class="blog-link">
-  <div class="blog-karti">
-    <div class="blog-gorsel">
-      <img src="matematikçiler/René Descartes1.png" alt="Blog görseli">
-    </div>
-    <div class="blog-baslik">
-      <h2>Aynı düşünmek insanı neye sürükler?</h2>
-    </div>
-  </div>
-</a>
 
 
 <div class="logo-kutu">
