--- a/blog1.html
+++ b/blog1.html
@@ -63,17 +63,29 @@
   <div class="blog-icerik-karti">
     <h1>Matematiği Sıfırdan İnşa Etmek Mümkün mü?</h1>
 
-    <p>Matematik, çoğu kişi için değişmez kurallar bütünü olarak görülür. Ancak hiç düşündünüz mü: Matematiği gerçekten sıfırdan, hiçbir ön bilgiye dayanmadan inşa etmek mümkün mü? Cevap, şaşırtıcı şekilde “evet” — ama göründüğü kadar basit değil.</p>
+    <p>Bu konuya ilk önce sıfırdan inşa etmenin ne olduğunu açıklayarak başlayalım. Sıfırdan inşa etmek veya keşfetmek dediğimiz konu aslında insanın belli tanımları ve aksiyomları kabul etmesi ile başlar. Tanım ve aksiyomlar olmadan matematik dediğimiz bilim de var olamaz. Bunları insan algısının en rahat tanımlayabileceği şekilde kararlaştırdıktan sonra geri kalan kısım yeni bir dünyaya adım atmak gibidir.</p>
 
-    <h2>Her Şey Birkaç Tanım ve Aksiyomla Başlar</h2>
-    <p>Matematiği sıfırdan kurmak isteyen biri, önce neyin “var” olduğunu tanımlamak zorundadır. Bu noktada karşımıza mantık ve kümeler kuramı çıkar. Modern matematiğin temelinde, genellikle Zermelo-Fraenkel Kümeler Kuramı (ZF) ve buna eklenen Seçim Aksiyomu (C) yer alır. Bunlar, “kümeler”in nasıl çalıştığını belirleyen kurallardır.</p>
+    <p>Bu yeni dünyada ilk yapılacak şey bildiklerimizi kullanarak yeni ürünler veya matematik açısından bakarsak yeni tanımlar bulmaya çalışmaktır. Bir yerden sonra bu tanımları kullanarak belli kurallar keşfederiz. Anlattığımız bu kurallar aslında lemmaları ve teoremleri doğurur. Evet, çoğu kişinin korkup ezber diye düşündüğü kurallar aslında tanımını öğrendiklerimiz ile keşfediliyor.</p>
 
-    <p>Bu aksiyomlar, üzerinde inşa edilecek dev bir yapının temellerini oluşturur. Sayılar, fonksiyonlar, denklemler ve hatta geometri bile bu temel kurallar yardımıyla tanımlanabilir.</p>
+    <h2>Peki ya Nasıl?</h2>
 
-    <h2>Sayılar Bile Tanımla Başlar</h2>
-    <p>Bir çocuk için “1, 2, 3...” doğal birer sayı olabilir. Fakat sıfırdan başlamak isteyen bir matematikçi için bu sayılar bile tanımlanmalıdır. 0’ın ne olduğunu, 1’in neye karşılık geldiğini, toplamanın ve çarpmanın nasıl tanımlanacağını yeniden inşa etmek gerekir.</p>
+    <p>Teoremler veya lemmaların nasıl oluştuğuna değindik. Ama onların nasıl bulunduğu daha da farklı bir konu. Benim fikrime göre insanın hayal gücü, ortam koşulları, bilimin durumu, insanın ihtiyaçları ve benzeri konular sayesinde bu buluşlar ortaya çıkıyor. Merak ve hırsı da eklemek isterim. Aslında bir üçgenin alanını bulmak için ilk öğrendiğimiz kural (taban × yükseklik) / 2. Lakin bir matematikçi ortaya çıkıp “Başka nasıl hesaplayabilirim ki?” sorusunu kendine sorduğu zaman, başka bir yöntem bulmak için bildiği tüm kuralları ve tanımları kullanmaya çalışır.</p>
 
-    <p>Bu amaçla kullanılan en bilinen yöntemlerden biri, Peano Aksiyomlarıdır. Bu aksiyomlar, doğal sayıları ve onların davranışlarını mantıksal temellerle açıklar. Sonrasında bu doğal sayılar, tam sayılara, rasyonel sayılara, reel sayılara ve karmaşık sayılara kadar genişletilebilir.</p>
+    <p>Bazen iki farklı tanımın birleşmesi üçüncü bir tanımı doğurmazken, bir tanım bir kural ile yeni bir kural doğurabilir. Ardından, tabi ki gelmesi gereken hayal gücü ve düşünce de matematiğin içine girdimi bu yeni dünyada hızlıca bir şeyler inşa etmeye başlarız.</p>
+
+    <h2>Aksiyom Nedir?</h2>
+
+    <p>Aksiyom, matematik ve mantıkta doğruluğu açık ve tartışmasız kabul edilen temel önermelerdir. Herhangi bir şekilde ispat gerektirmeden kabul edilen tartışmasız doğrular olarak kabul edilebilir. Aksiyomlara örnek verirsek, geometri derslerinde işlediğimiz geometriyi Öklid aksiyomlarını kullanarak işleriz veya doğal sayıları tanımlayan Peano Aksiyomları örnek verilebilir.</p>
+
+    <h2>İnanmanın Temeli Kanıtlamak mıdır?</h2>
+
+    <p>Matematik ile ilgili çoğu yerde ilk kez bir bilgi veya kural gördüğümüz zaman direkt inanabiliyoruz. Bunun doğru bir şey olduğunu iki açıdan söyleyemeyiz. Birincisi, internet gibi bir ortamdan görmüşsek bilgi kirliliği günümüzde çok arttı. Ama bir kitap, yani yazılı kaynak ise, o bilginin doğruluğuna inanmak onun doğru olduğunu kanıtlamaz çünkü gördüğümüz bilgiyi kanıtlayan hiçbir şey yer almıyordur.</p>
+
+    <p>İkincisi ise, gördüğümüz bilgiyi bir sonraki gün unutmuş olacağız ve bir daha o bilginin ne olduğunu aklımıza gelmeyecek. Belki de gördüğümüz bilgi bize tüm öğrendiklerimizi unutturacak kadar değerliydi. Böyle durumlar yaşamamak için özellikle kendimiz gördüğümüz bilgileri, kuralları kanıtlamamız gerekir. Eğer ispatlamaya çalışırken başarısız olsak bile bir adım atmış oluruz çünkü aklınıza hiç beklemediğiniz bir anda çözemediğiniz yer gelir ve çözmeye çalışırsınız. Bu durumda çözememek bile size en azından o bilgiyi ya da kuralı aklınıza getirecektir.</p>
+
+    <h2>Matematiği İnşa Etmek</h2>
+
+    <p>Bloğumuzun konusu olan matematiği sıfırdan inşa etmek, bize göre mümkün. Eğer bir insan yeteri kadar hayal gücüne, meraka ve disipline sahipse, kendi aksiyomları ve tanımları ile bile matematik inşa edebilir. Sonuçta Öklid, Gauss, Euler, Arşimet, Newton ve Leibniz de bizim gibi insanlardı. Onlar sadece bizden daha disiplinli ve daha meraklı insanlardı.</p>
       <div class="yazar">Pertevniyal Matematik Kulübü</div>
   </div>
 
