--- a/blog1_en.html
+++ b/blog1_en.html
@@ -61,19 +61,39 @@
 
 
   <div class="blog-icerik-karti">
-   <h1>Is It Possible to Build Mathematics from Scratch?</h1>
+      <h1>Is It Possible to Build Mathematics from Scratch?</h1>
 
-<p>For most people, mathematics is seen as a set of unchanging rules. But have you ever wondered: Is it really possible to build mathematics from scratch, without any prior knowledge? The answer is surprisingly “yes”—but it’s not as simple as it seems.</p>
+    <p>Let’s begin this topic by first explaining what it means to build mathematics from scratch. The concept of "building from scratch" or "discovering" actually starts with a person accepting certain definitions and axioms. Without definitions and axioms, the field we call mathematics cannot exist. Once we determine these in a way that aligns most naturally with human perception, the rest is like stepping into a whole new world.</p>
 
-<h2>It All Starts with a Few Definitions and Axioms</h2>
-<p>Anyone who wants to construct mathematics from scratch must first define what “exists.” Here, logic and set theory come into play. The foundation of modern mathematics usually lies in Zermelo-Fraenkel Set Theory (ZF), along with the Axiom of Choice (C). These are the rules that determine how “sets” work.</p>
+    <p>In this new world, the first thing to do is to try to use what we already know to create new concepts or from a mathematical perspective, to discover new definitions. At some point, by using these definitions, we begin to uncover certain rules. These rules give rise to what we call lemmas and theorems. Yes, the very rules that many people fear or dismiss as mere memorization are, in fact, discovered through the concepts we've already defined.</p>
 
-<p>These axioms form the foundation of a massive structure to be built upon. Numbers, functions, equations, and even geometry can be defined with the help of these fundamental rules.</p>
+    <h2>But how, exactly?</h2>
 
-<h2>Even Numbers Begin with Definitions</h2>
-<p>For a child, “1, 2, 3...” may seem like natural numbers. But for a mathematician starting from scratch, even these numbers need to be defined. What zero actually is, what one represents, how addition and multiplication are defined—all need to be reconstructed.</p>
+    <p>We’ve talked about how theorems or lemmas are formed. But how they are actually discovered is a different matter altogether. In my opinion, such discoveries emerge thanks to a combination of human imagination, environmental conditions, scientific progress, human needs, and similar factors. I would also add curiosity and ambition to that list.</p>
 
-<p>One of the most well-known methods used for this is the Peano Axioms. These axioms logically explain natural numbers and their properties. Afterward, natural numbers can be extended to integers, rational numbers, real numbers, and complex numbers.</p>
+    <p>For example, the first rule we learn to calculate the area of a triangle is usually: (base × height) / 2. However, when a mathematician asks themselves, "Is there another way I can calculate this?", they begin to use all the definitions and rules they know in an attempt to find a new method.</p>
+
+    <p>Sometimes, combining two different definitions does not necessarily lead to a third one, but combining a definition with a rule can indeed give rise to a new rule. And once imagination and deep thought enter the world of mathematics, we begin building new things in this world at a rapid pace.</p>
+
+    <h2>What is an Axiom?</h2>
+
+    <p>An axiom is a fundamental proposition in mathematics and logic that is accepted as true without requiring proof. These are statements considered to be self-evident truths. For example, in geometry, we often study using Euclidean axioms, and when defining natural numbers, we refer to the Peano axioms. These form the foundation upon which mathematical systems are built.</p>
+
+    <h2>Is Belief Based on Proof?</h2>
+
+    <p>In many areas related to mathematics, when we encounter a rule or piece of information for the first time, we tend to believe it immediately. However, this is not necessarily the right approach and here's why:</p>
+
+    <p>First, if we saw that information online or in a non-verified environment, the risk of misinformation is quite high nowadays. Even if it comes from a written source like a book, simply believing it doesn’t prove it’s true because most of the time, there’s no actual proof presented alongside the claim.</p>
+
+    <p>Second, we often forget such information the very next day. The concept might never cross our minds again, even though it could have been valuable enough to challenge or even replace our previous understanding. To avoid such situations, it’s important to attempt to prove or justify the information ourselves.</p>
+
+    <p>Even if we fail to prove something, the very act of trying is a step forward. Sometimes, a part you couldn't figure out earlier will unexpectedly pop back into your mind and you’ll start thinking it through again. Even in failure, the process helps anchor the concept in your memory and leads to a deeper understanding of the rule or idea.</p>
+
+    <h2>Building Mathematics</h2>
+
+    <p>The subject of our blog—building mathematics from scratch—is, in our view, entirely possible. If a person possesses enough imagination, curiosity, and discipline, they can construct their own mathematical system, complete with unique axioms and definitions.</p>
+
+    <p>After all, figures like Euclid, Gauss, Euler, Archimedes, Newton, and Leibniz were all human just like us. What set them apart was not some supernatural gift, but rather a stronger sense of discipline and intellectual curiosity. That same potential lives within anyone willing to explore it deeply.</p>
       <div class="yazar">Pertevniyal Mathematic Club</div>
   </div>
 
