--- a/blog2.html
+++ b/blog2.html
@@ -60,15 +60,25 @@
 </div>
 
   <div class="blog-icerik-karti">
-    <h1>Geçmişin İzinden Günümüze...</h1>
+      <h1>Matematik ve Doğa Arasındaki İlişki</h1>
 
-    <p>Matematik, insanlık tarihinin sessiz tanığıdır. Antik Mısır’da piramitlerin inşasında kullanılan geometriden, Babil’de yıldızların hareketini hesaplamaya yarayan sayı sistemlerine kadar her adım, bizi bugünkü modern dünyaya yaklaştırdı.</p>
+    <p>İnsanlar doğaya baktığı zaman etrafındaki matematiksel güzelliği fark etmeyebilir. Ancak merak edip biraz araştırırsa doğanın her yerinde matematiğe dair izler olduğunu fark edecektir.</p>
 
-    <p>Bugün cebir çözerken ya da bir uygulamayı kullanırken, binlerce yıl önce yaşamış matematikçilerin bıraktığı mirası sürdürüyoruz. Pisagor’un üçgenleri, Öklid’in düzlemleri, Arşimet’in sonsuzluk arayışları... Hepsi modern matematiğin yapıtaşları haline geldi.</p>
+    <h2>Fibonacci Dizisi ve Çiçekler</h2>
+    <p>İlk ele almamız gereken ilişki Fibonacci dizisi ve çiçekler arasındadır. Bir çam kozalağının pul dizilimi dikkatlice incelendiğinde, bu dizilimlerin saat yönü ve saat yönünün tersinde Fibonacci dizisine karşılık geldiği görülür.</p>
 
-    <p>Geçmişte sorulan sorular, bugün hâlâ yankılanıyor. "Sonsuz nedir?", "Sayılar gerçekten var mı?", "Her şey hesaplanabilir mi?"</p>
+    <h2>Kar Tanelerinin Altıgen Yapısı</h2>
+    <p>İkinci verebileceğimiz örnek kar tanelerinin altıgen şeklinde olmasıdır. Bunun nedeni her kar tanesinin donarken kristal yapılar oluşturması ve su moleküllerindeki hidrojen bağlarının birbirlerine 120 derecelik bir açı ile bağlanmasıdır. Bu sayede altıgen görüntüsü elde edilir. Daha ilginç olan ise her kar tanesinin birbirinden farklı bir yapıda olmasıdır.</p>
 
-    <p>Matematik, sadece sayıların değil, insan aklının da bir yolculuğu. Ve bu yolculuk, geçmişin izlerinden beslenerek geleceğe yön veriyor.</p>
+    <h2>Dalgalar ve Trigonometrik Fonksiyonlar</h2>
+    <p>Üçüncü örnek olarak dalgalar ile trigonometrik fonksiyonların birbiri ile bağlantılı oluşunu söyleyebiliriz. Işık dalgaları, ses dalgaları, deniz dalgaları ve hatta kalp atışları sinüzoidal desenlerle açıklanabilir. İnsan beynindeki sinirsel ve elektriksel aktiviteler bile bu tür dalgalarla analiz edilebilir. Basit bir trigonometrik fonksiyon olan sin(x) ile bu kadar çok doğal olayı modelleyerek matematiğin doğayı anlamada ne kadar temel bir rolü olduğunu görebiliriz.</p>
+
+    <h2>Altın Oran ve Doğadaki Yansımaları</h2>
+    <p>Son olarak da altın oran ile ilgili örnekler verebiliriz. Nautilus gibi deniz kabukları, altın orana göre spiraller halinde büyürler. Spiral şeklinde büyüyen bu canlı, her seferinde bir önceki şekliyle benzer bir yapı oluşturur fakat sadece büyüklüğünü arttırmış olur. Altın oran deniz kabuklarında olduğu gibi insan yüz oranlarında da kendini gösterir. İlk örnekte anlattığımız Fibonacci dizisi ile de ilgilidir çünkü bazı çiçekler incelendiğinde büyümeleri altın orana göre olur. İlginçtir ki uzaydaki galaksilerin spiral kollarında bile altın orana rastlanmıştır.</p>
+
+    <h2>Sonuç</h2>
+    <p>Bu yazımızda doğa ve matematik arasındaki ilişkiyi kısa örneklerle inceledik. Doğada bu ayrıntılar en çok rastlanabilecek olan yapraklarda bile gizliyken bizler internetin başında zamanımızı harcıyoruz. Sizden ricamız bu güzelliklere dışarıda bizzat tanık olup doğru bir araştırma yapmanızdır.</p>
+  </div>
       <div class="yazar">Pertevniyal Matematik Kulübü</div>
   </div>
 
