--- a/blog2_en.html
+++ b/blog2_en.html
@@ -60,15 +60,24 @@
 </div>
 
   <div class="blog-icerik-karti">
-<h1>From the Footsteps of the Past to Today...</h1>
+ <h1>The Relationship Between Mathematics and Nature</h1>
 
-<p>Mathematics is the silent witness of human history. From the geometry used in building the pyramids of Ancient Egypt to the number systems that helped calculate the movement of stars in Babylon, every step has brought us closer to the modern world we live in today.</p>
+    <p>When people look at nature, they may not immediately recognize the mathematical beauty surrounding them. However, with a bit of curiosity and exploration, they will soon realize that traces of mathematics are present everywhere in the natural world.</p>
 
-<p>When we solve algebra problems or use an app today, we continue the legacy left by mathematicians who lived thousands of years ago. Pythagoras’ triangles, Euclid’s planes, Archimedes’ quest for infinity... all have become the building blocks of modern mathematics.</p>
+    <h2>Fibonacci Sequence and Flowers</h2>
+    <p>The first relationship we should explore is between the Fibonacci sequence and flowers. If you carefully examine the arrangement of the scales on a pine cone, you’ll notice that the spirals going clockwise and counterclockwise correspond to consecutive numbers in the Fibonacci sequence.</p>
 
-<p>The questions asked in the past still echo today: "What is infinity?", "Do numbers really exist?", "Can everything be calculated?"</p>
+    <h2>Hexagonal Snowflakes</h2>
+    <p>Another striking example is the hexagonal shape of snowflakes. This occurs because each snowflake forms a crystal structure as it freezes, and the hydrogen bonds between water molecules naturally connect at 120-degree angles, resulting in a six-sided, or hexagonal, shape. What's even more fascinating is that no two snowflakes are ever exactly alike—each one forms a unique pattern.</p>
 
-<p>Mathematics is not just about numbers, but also a journey of the human mind. And this journey is guided by the traces of the past, shaping the future.</p>
+    <h2>Waves and Trigonometric Functions</h2>
+    <p>As a third example, we can highlight the connection between waves and trigonometric functions. Light waves, sound waves, ocean waves, and even heartbeats can all be described using sinusoidal patterns. The neural and electrical activity in the human brain can also be analyzed through these wave forms. With a simple trigonometric function like <code>sin(x)</code>, we can model so many natural phenomena—showing just how fundamental mathematics is to understanding nature.</p>
+
+    <h2>The Golden Ratio in Nature</h2>
+    <p>Lastly, we can turn to the concept of the golden ratio. Shells like those of the nautilus grow in spirals that follow the golden ratio. Each new section replicates the shape of the previous one, only larger in size. This same ratio appears not only in seashells but also in the proportions of the human face. It is also connected to the Fibonacci sequence we mentioned earlier—some flowers grow in ways that reflect the golden ratio. Fascinatingly, even the spiral arms of galaxies have been found to follow this same pattern.</p>
+
+    <h2>Conclusion</h2>
+    <p>In this article, we’ve explored the relationship between mathematics and nature through a few simple examples. While these patterns can be found even in something as common as a leaf, many of us spend our time passively behind screens. Our request to you is this: step outside, observe the world closely, and engage in thoughtful exploration—you’ll be amazed at the mathematical beauty nature has to offer.</p>
 
       <div class="yazar">Pertevniyal Mathematic Club</div>
   </div>
