--- a/blog_en.html
+++ b/blog_en.html
@@ -88,38 +88,17 @@ Is It Possible to Build Mathematics From Scratch?</h2>
 <a href="blog2_en.html" class="blog-link">
   <div class="blog-karti">
     <div class="blog-gorsel">
-      <img src="matematikçiler/arşimet1.png" alt="Blog görseli">
+      <img src="matematikçiler/Leonardo Pisano Bigollo 1.png" alt="Blog görseli">
     </div>
     <div class="blog-baslik">
       <h2>
-From the Traces of the Past to the Present...</h2>
+Mathematics and Nature</h2>
     </div>
   </div>
 </a>
 
 
-<a href="blog3_en.html" class="blog-link">
-  <div class="blog-karti">
-    <div class="blog-gorsel">
-      <img src="matematikçiler/Carl Friedrich Gauss1.png" alt="Blog görseli">
-    </div>
-    <div class="blog-baslik">
-      <h2>Should mathematics be learned at a young age?</h2>
-    </div>
-  </div>
-</a>
 
-
-<a href="blog4_en.html" class="blog-link">
-  <div class="blog-karti">
-    <div class="blog-gorsel">
-      <img src="matematikçiler/René Descartes1.png" alt="Blog görseli">
-    </div>
-    <div class="blog-baslik">
-      <h2>What Does Thinking Alike Lead To?</h2>
-    </div>
-  </div>
-</a>
 
 
 <div class="logo-kutu">
